# Autonomous-Driving-System

./: CMakeLists.txt  README.md  main.cc
doc/: input_data.txt  task_process.txt
modules/Debug/: Debug_Interface.cpp  Debug_Interface.h
modules/Debug/log/: adc_path.csv  obs_trj.csv  st_data.csv
modules/canbus/proto/: canbus_conf.pb.cc  canbus_conf.pb.h  ch.pb.cc  ch.pb.h  chassis.pb.cc  chassis.pb.h  chassis_detail.pb.cc  chassis_detail.pb.h  devkit.pb.cc  devkit.pb.h  ge3.pb.cc  ge3.pb.h  lexus.pb.cc  lexus.pb.h  neolix_edu.pb.cc  neolix_edu.pb.h  transit.pb.cc  transit.pb.h  vehicle_parameter.pb.cc  vehicle_parameter.pb.h  wey.pb.cc  wey.pb.h  zhongyun.pb.cc  zhongyun.pb.h
modules/common/configs/: config_gflags.cc  config_gflags.h  vehicle_config_helper.cc  vehicle_config_helper.h
modules/common/data/: global_flagfile.txt
modules/common/math/: aabox2d.cc  box2d.cc  cartesian_frenet_conversion.cc  line_segment2d.cc  linear_interpolation.cc  linear_interpolation.h  path_matcher.cc  polygon2d.cc  vec2d.cc
modules/common/proto/: direction.pb.cc  direction.pb.h  drive_event.pb.cc  drive_event.pb.h  drive_state.pb.cc  drive_state.pb.h  error_code.pb.cc  error_code.pb.h  geometry.pb.cc  geometry.pb.h  header.pb.cc  header.pb.h  pnc_point.pb.cc  pnc_point.pb.h  vehicle_signal.pb.cc  vehicle_signal.pb.h
modules/common/util/: factory.h  util.h
modules/dreamview/proto/: camera_update.pb.cc  camera_update.pb.h  chart.pb.cc  chart.pb.h  data_collection_table.pb.cc  data_collection_table.pb.h  hmi_config.pb.cc  hmi_config.pb.h  hmi_mode.pb.cc  hmi_mode.pb.h  hmi_status.pb.cc  hmi_status.pb.h  point_cloud.pb.cc  point_cloud.pb.h  preprocess_table.pb.cc  preprocess_table.pb.h  simulation_world.pb.cc  simulation_world.pb.h
modules/drivers/proto/: conti_radar.pb.cc  conti_radar.pb.h  delphi_esr.pb.cc  delphi_esr.pb.h  mobileye.pb.cc  mobileye.pb.h  pointcloud.pb.cc  pointcloud.pb.h  racobit_radar.pb.cc  racobit_radar.pb.h  radar.pb.cc  radar.pb.h  sensor_image.pb.cc  sensor_image.pb.h  smartereye.pb.cc  smartereye.pb.h  ultrasonic_radar.pb.cc  ultrasonic_radar.pb.h
modules/localization/proto/: gnss_pnt_result.pb.cc  gnss_pnt_result.pb.h  gps.pb.cc  gps.pb.h  imu.pb.cc  imu.pb.h  localization.pb.cc  localization.pb.h  localization_config.pb.cc  localization_config.pb.h  localization_status.pb.cc  localization_status.pb.h  measure.pb.cc  measure.pb.h  pose.pb.cc  pose.pb.h  rtk_config.pb.cc  rtk_config.pb.h  sins_pva.pb.cc  sins_pva.pb.h
modules/map/proto/: map.pb.cc  map.pb.h  map_clear_area.pb.cc  map_clear_area.pb.h  map_crosswalk.pb.cc  map_crosswalk.pb.h  map_geometry.pb.cc  map_geometry.pb.h  map_id.pb.cc  map_id.pb.h  map_junction.pb.cc  map_junction.pb.h  map_lane.pb.cc  map_lane.pb.h  map_overlap.pb.cc  map_overlap.pb.h  map_parking_space.pb.cc  map_parking_space.pb.h  map_pnc_junction.pb.cc  map_pnc_junction.pb.h  map_road.pb.cc  map_road.pb.h  map_rsu.pb.cc  map_rsu.pb.h  map_signal.pb.cc  map_signal.pb.h  map_speed_bump.pb.cc  map_speed_bump.pb.h  map_speed_control.pb.cc  map_speed_control.pb.h  map_stop_sign.pb.cc  map_stop_sign.pb.h  map_yield_sign.pb.cc  map_yield_sign.pb.h
modules/monitor/proto/: system_status.pb.cc  system_status.pb.h
modules/perception/proto/: ccrf_type_fusion_config.pb.cc  ccrf_type_fusion_config.pb.h  dst_existence_fusion_config.pb.cc  dst_existence_fusion_config.pb.h  dst_type_fusion_config.pb.cc  dst_type_fusion_config.pb.h  fused_classifier_config.pb.cc  fused_classifier_config.pb.h  map_manager_config.pb.cc  map_manager_config.pb.h  motion_service.pb.cc  motion_service.pb.h  pbf_tracker_config.pb.cc  pbf_tracker_config.pb.h  perception_camera.pb.cc  perception_camera.pb.h  perception_config_schema.pb.cc  perception_config_schema.pb.h  perception_lane.pb.cc  perception_lane.pb.h  perception_obstacle.pb.cc  perception_obstacle.pb.h  perception_ultrasonic.pb.cc  perception_ultrasonic.pb.h  probabilistic_fusion_config.pb.cc  probabilistic_fusion_config.pb.h  roi_boundary_filter_config.pb.cc  roi_boundary_filter_config.pb.h  rt.pb.cc  rt.pb.h  sensor_meta_schema.pb.cc  sensor_meta_schema.pb.h  tracker_config.pb.cc  tracker_config.pb.h  traffic_light_detection.pb.cc  traffic_light_detection.pb.h
modules/planning/common/: dependency_injector.h  ego_info.cc  ego_info.h  frame.cc  frame.h  history.cc  history.h  indexed_queue.h  obstacle.cc  obstacle.h  planning_context.h  planning_gflags.cc  planning_gflags.h  reference_line_info.cc  reference_line_info.h  speed_limit.cc
modules/planning/conf/: planning_config.pb.txt
modules/planning/constraint_checker/: constraint_checker.cc
modules/planning/planner/: planner.h
modules/planning/proto/: auto_tuning_model_input.pb.cc  auto_tuning_model_input.pb.h  auto_tuning_raw_feature.pb.cc  auto_tuning_raw_feature.pb.h  decision.pb.cc  decision.pb.h  ipopt_return_status.pb.cc  ipopt_return_status.pb.h  lattice_structure.pb.cc  lattice_structure.pb.h  learning_data.pb.cc  learning_data.pb.h  open_space_task_config.pb.cc  open_space_task_config.pb.h  pad_msg.pb.cc  pad_msg.pb.h  planner_open_space_config.pb.cc  planner_open_space_config.pb.h  planning.pb.cc  planning.pb.h  planning_config.pb.cc  planning_config.pb.h  planning_config.proto  planning_internal.pb.cc  planning_internal.pb.h  planning_semantic_map_config.pb.cc  planning_semantic_map_config.pb.h  planning_stats.pb.cc  planning_stats.pb.h  planning_status.pb.cc  planning_status.pb.h  reference_line_smoother_config.pb.cc  reference_line_smoother_config.pb.h  sl_boundary.pb.cc  sl_boundary.pb.h  st_drivable_boundary.pb.cc  st_drivable_boundary.pb.h  task_config.pb.cc  task_config.pb.h  task_config.proto  (+2 more)
modules/planning/reference_line/: .reference_point.cc.swp  reference_line.cc  reference_line.h  reference_point.cc  reference_point.h
modules/planning/scenarios/: scenario.cc  scenario.h  scenario_manager.cc  scenario_manager.h  stage.cc  stage.h
modules/planning/tasks/: task.cc  task.h  task_factory.cc
modules/prediction/proto/: feature.pb.cc  feature.pb.h  fnn_model_base.pb.cc  fnn_model_base.pb.h  (+20 more)
python_debug/: plot.py
(+80 files in other folders)
